--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       name="keywords"
       content="admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard" />
     <meta name="author" content="PIXINVENT" />
-    <title>IR Guest Info</title>
+    <title>Channel Manager</title>
 
     <link
       rel="apple-touch-icon"
@@ -80,12 +80,13 @@
       label-position="right"
       label-border="none"></ir-input-text> -->
 
+    <script></script>
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        const irChannel = document.querySelector("ir-channel-manager");
-
+      let NOSQL_ID = -1;
+      const irChannel = document.querySelector("ir-channel-manager");
+      function getData() {
         const url =
-          "https://gateway.igloorooms.com/IR/Get_Nosql_By_ENTITY_NAME_ENTITY_KEY_ENTITY_FIELD?Ticket=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTMwNzgyMDMsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoiSEZpRVZhRFpTWDhsNmlXWlBVV21kZzVGa1oxK3FpTkJ0VG1KQ2VTanZZZz0ifQ.frXrUrO0cHlghZ4Zqm8fde1RR4iw7Inoir55LLsOT4w";
+          "https://gateway.igloorooms.com/IR/Get_Nosql_By_ENTITY_NAME_ENTITY_KEY_ENTITY_FIELD?Ticket=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTM2NjI5MzEsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoidEx1dmxrYUxwWktBZFQ0QXlPVFlSSU1uZVkvOFlGalYwWitvUzVITXlsTT0ifQ.eJLUejyrYjBgLVsxM6oWhHiCZVnjuadZgyFtQgHxWUE";
 
         var myHeaders = new Headers();
         myHeaders.append("Content-Type", "application/json");
@@ -106,20 +107,24 @@
         fetch(url, requestOptions)
           .then((response) => response.json())
           .then((result) => {
-            console.log(result)
             const res = JSON.parse(result.My_Result[0].DATA);
-            console.log(res);
-            irChannel.listData = [res];
+            irChannel.listData = res;
+            if (res.length > 0) {
+              NOSQL_ID = result.My_Result[0].NOSQL_ID;
+            } else {
+              NOSQL_ID = -1;
+            }
           })
           .catch((error) => console.log("error", error));
+      }
+      document.addEventListener("DOMContentLoaded", () => {
+        getData();
       });
-    </script>
-    <script>
-      const irChannel = document.querySelector("ir-channel-manager");
+
       irChannel.addEventListener("fetchApi", (e) => {
-        console.log('Fetching to server')
+        console.log("Fetching to server", NOSQL_ID);
         const url =
-          "https://gateway.igloorooms.com/IR/Edit_Nosql?Ticket=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTMwNzgyMDMsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoiSEZpRVZhRFpTWDhsNmlXWlBVV21kZzVGa1oxK3FpTkJ0VG1KQ2VTanZZZz0ifQ.frXrUrO0cHlghZ4Zqm8fde1RR4iw7Inoir55LLsOT4w";
+          "https://gateway.igloorooms.com/IR/Edit_Nosql?Ticket=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTM2NjI5MzEsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoidEx1dmxrYUxwWktBZFQ0QXlPVFlSSU1uZVkvOFlGalYwWitvUzVITXlsTT0ifQ.eJLUejyrYjBgLVsxM6oWhHiCZVnjuadZgyFtQgHxWUE";
 
         var myHeaders = new Headers();
         myHeaders.append("Content-Type", "application/json");
@@ -128,12 +133,14 @@
         console.log(d);
 
         var raw = JSON.stringify({
-          NOSQL_ID: 15,
+          NOSQL_ID: NOSQL_ID,
           ENTITY_NAME: "TBL_AC",
           ENTITY_KEY: 42,
           ENTITY_FIELD: "CHANNELS",
           DATA: d,
         });
+
+        console.log(raw);
 
         var requestOptions = {
           method: "POST",
@@ -144,12 +151,13 @@
 
         fetch(url, requestOptions)
           .then((response) => response.text())
-          .then((result) => console.log(result))
+          .then((result) => getData())
           .catch((error) => console.log("error", error));
       });
 
-      irChannel.addEventListener('requestApiDelete', (e) => {
-        const url = "https://gateway.igloorooms.com/IR/Delete_Nosql?Ticket=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTMwNzgyMDMsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoiSEZpRVZhRFpTWDhsNmlXWlBVV21kZzVGa1oxK3FpTkJ0VG1KQ2VTanZZZz0ifQ.frXrUrO0cHlghZ4Zqm8fde1RR4iw7Inoir55LLsOT4w";
+      irChannel.addEventListener("requestApiDelete", (e) => {
+        const url =
+          "https://gateway.igloorooms.com/IR/Delete_Nosql?Ticket=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTM2NjI5MzEsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoidEx1dmxrYUxwWktBZFQ0QXlPVFlSSU1uZVkvOFlGalYwWitvUzVITXlsTT0ifQ.eJLUejyrYjBgLVsxM6oWhHiCZVnjuadZgyFtQgHxWUE";
         var myHeaders = new Headers();
         myHeaders.append("Content-Type", "application/json");
 
@@ -171,8 +179,6 @@
           .then((result) => console.log(result))
           .catch((error) => console.log("error", error));
       });
-
-    </script> 
-     
+    </script>
   </body>
 </html>
