--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
       label-border="none"></ir-input-text> -->
 
     <script>
-      const ticket =
-        "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTQ4NzA2NjAsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoicUpNQlM3T1FxTUZFZFVjTnplMlhzRGVlOS9jV09TV1JUdjNQRzBBOWtwbz0ifQ.KJNLnyOHuPFqLTwXLYWg1420_iFD7x93wGXqWboOh-Y";
+      const ticket = 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTUxODg4NzcsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoiMzBLV1hFL3BnVlFwblNnUFFxRmFrWHdXck1kRktLdWh5UGdEdm5pbDBlZz0ifQ.SKx8WkqAwyXRW3K6PWVJ7loO8J7xVEMcCJEv-9viMmo'
       const irBookingDetails = document.querySelector("ir-booking-details");
 
       var myHeaders = new Headers();
