--- a/index.html
+++ b/index.html
@@ -192,6 +192,34 @@
         })
         .catch((error) => console.log("error", error));
 
+        fetch(`https://gateway.igloorooms.com/IR/Get_Exposed_Countries?Ticket=${ticket}`, {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                BH_ID: 13658735,
+                language: "EN",
+              }),
+            })
+            .then(response => response.json())
+            .then(result => {
+              console.log("HIII", result);
+              irBookingDetails.setupDataCountries = result.My_Result.map(item => {
+                return {
+                  value: item.id,
+                  text: item.name,
+                };
+              });
+              irBookingDetails.setupDataCountriesCode = result.My_Result.map(item => {
+                return {
+                  value: item.phone_prefix,
+                  text: item.phone_prefix,
+                };
+              });
+            });
+      
+
       irBookingDetails.addEventListener("submitForm", (e) => {
         console.log(e.detail);
       });
