adding ir-webcmo.css

--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@
       type="text/css"
       href="./app-assets/css/pages/login-register.css" />
     <!-- END: Page CSS-->
-    <link rel="stylesheet" type="text/css" href="./assets/colors.css" />
-    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
 
     <script type="module" src="./ir-webcmp/ir-webcmp.esm.js"></script>
+    <link rel="stylesheet" href="/ir-webcmp/ir-webcmp.css" />
 
     <style></style>
   </head>
@@ -83,7 +82,8 @@
       label-border="none"></ir-input-text> -->
 
     <script>
-      const ticket = 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTUxODg4NzcsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoiMzBLV1hFL3BnVlFwblNnUFFxRmFrWHdXck1kRktLdWh5UGdEdm5pbDBlZz0ifQ.SKx8WkqAwyXRW3K6PWVJ7loO8J7xVEMcCJEv-9viMmo'
+      const ticket =
+        "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2OTUzNjY1MjgsIkNMQUlNLTAxIjoicktLMi9DY1dQQnM9IiwiQ0xBSU0tMDIiOiI5UStMQm93VTl6az0iLCJDTEFJTS0wMyI6Ilp3Tys5azJoTzUwPSIsIkNMQUlNLTA0IjoiOUNueUJrSGFTSTBzSVBrc2pIRzhYZ1NyWkpXT21NZFVEL2Jzbkh0dGQrST0ifQ.IF7kCYy5MALVCg8z0IKFeb6MUtSngNtxCqD2sRm7Wuw";
       const irBookingDetails = document.querySelector("ir-booking-details");
 
       var myHeaders = new Headers();
@@ -192,33 +192,37 @@
         })
         .catch((error) => console.log("error", error));
 
-        fetch(`https://gateway.igloorooms.com/IR/Get_Exposed_Countries?Ticket=${ticket}`, {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify({
-                BH_ID: 13658735,
-                language: "EN",
-              }),
-            })
-            .then(response => response.json())
-            .then(result => {
-              console.log("HIII", result);
-              irBookingDetails.setupDataCountries = result.My_Result.map(item => {
-                return {
-                  value: item.id,
-                  text: item.name,
-                };
-              });
-              irBookingDetails.setupDataCountriesCode = result.My_Result.map(item => {
-                return {
-                  value: item.phone_prefix,
-                  text: item.phone_prefix,
-                };
-              });
-            });
-      
+      fetch(
+        `https://gateway.igloorooms.com/IR/Get_Exposed_Countries?Ticket=${ticket}`,
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            BH_ID: 13658735,
+            language: "EN",
+          }),
+        }
+      )
+        .then((response) => response.json())
+        .then((result) => {
+          console.log("HIII", result);
+          irBookingDetails.setupDataCountries = result.My_Result.map((item) => {
+            return {
+              value: item.id,
+              text: item.name,
+            };
+          });
+          irBookingDetails.setupDataCountriesCode = result.My_Result.map(
+            (item) => {
+              return {
+                value: item.phone_prefix,
+                text: item.phone_prefix,
+              };
+            }
+          );
+        });
 
       irBookingDetails.addEventListener("submitForm", (e) => {
         console.log(e.detail);
